[package]
name = "kiwi-server"
version = "0.1.0"
edition = "2021"
authors = [ "4hoe8pow <tokunaga@grill-ware.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5", features=['http', 'axum'] }
worker-macros = { version="0.5", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ['json', 'macros']}
tower-service = "0.3"
console_error_panic_hook = { version = "0.1.7" }
reqwest = "0.12"
serde = "^1.0"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1.20"
dashmap = "6.1.0"
